# sentinelssh

./: .dockerignore  .env.docker.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  entrypoint.sh  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  demo_data.py  extensions.py  frontend.py
backend/app/api/: __init__.py  attacks.py  errors.py  incidents.py  realtime.py  reports.py  search.py  stats.py  system.py
backend/app/auth/: routes.py  security.py
backend/app/realtime/: events.py
backend/app/reports/: __init__.py  builder.py  csv_export.py  pdf.py
backend/app/schemas/: stats.py  (+3 more)
backend/tests/: test_api.py  test_auth.py  test_realtime.py
core/: __init__.py  alembic.ini  db.py  pipeline.py  pyproject.toml
core/intel/: __init__.py  behavior.py  config.py  enrichment.py  incidents.py  mitre.py  reputation.py  risk.py
core/migrations/: env.py
core/migrations/versions/: 57a71b5051bf_initial_schema.py
core/models/: __init__.py  attack.py  command.py  incident.py  user.py
deploy/: backup.sh  render-start.sh  threat_feed.sample.txt
deploy/nginx/: sentinelssh.conf
deploy/systemd/: sentinelssh.service
docs/: API.md  DEPLOYMENT.md  PORTFOLIO.md  SOC_SHOWCASE.md
docs/screenshots/: README.md
frontend/: index.html  login.html
honeypot/: Dockerfile  __init__.py  capture.py  config.py  db_sink.py  pipeline_sink.py  realtime_publisher.py  requirements.txt  server.py  session_handler.py  ssh_server.py
scripts/: create_user.py  seed_demo.py  seed_demo_large.py  verify_phase4.py
(+15 files in other folders)
