[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "Shared data layer (SQLAlchemy models, sessions, migrations) for SentinelSSH."
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy==2.0.36",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "geoip2==4.8.0",
]

[tool.setuptools]
packages = ["core", "core.models", "core.intel"]
